// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`component/sidebar/sidebar_channel/SidebarChannel should match snapshot, on active channel show 1`] = `
<li
  className="active"
  key="channel-name"
>
  <SidebarChannelButtonOrLink
    badge={false}
    channelId="test-channel-id"
    channelStatus="test"
    channelType="D"
    displayName="Channel display name"
    handleClose={[Function]}
    link="/current-team/messages/@undefined"
    membersCount={8}
    rowClass="sidebar-item has-close"
    teammateDeletedAt={1}
    teammateId="teammate-id"
    unreadMentions={0}
  />
</li>
`;

exports[`component/sidebar/sidebar_channel/SidebarChannel should match snapshot, on channel show 1`] = `
<li
  className=""
  key="channel-name"
>
  <SidebarChannelButtonOrLink
    badge={false}
    channelId="test-channel-id"
    channelStatus="test"
    channelType="D"
    displayName="Channel display name"
    handleClose={[Function]}
    link="/current-team/messages/@undefined"
    membersCount={8}
    rowClass="sidebar-item has-close"
    teammateDeletedAt={1}
    teammateId="teammate-id"
    unreadMentions={0}
  />
</li>
`;

exports[`component/sidebar/sidebar_channel/SidebarChannel should match snapshot, on channel show with tutorial tip 1`] = `
<li
  className=""
  key="town-square"
>
  <SidebarChannelButtonOrLink
    badge={false}
    channelId="test"
    channelStatus="test"
    channelType="O"
    displayName="Town Square"
    handleClose={null}
    link="/current-team/channels/town-square"
    membersCount={8}
    rowClass="sidebar-item"
    teammateDeletedAt={1}
    teammateId="teammate-id"
    unreadMentions={0}
  />
  <SidebarTutorialTip
    offTopicDisplayName="Off-Topic"
    townSquareDisplayName="Town Square"
  />
</li>
`;

exports[`component/sidebar/sidebar_channel/SidebarChannel should match snapshot, on channel show with unread mentions (must have mentions badge) 1`] = `
<li
  className=""
  key="channel-name"
>
  <SidebarChannelButtonOrLink
    badge={true}
    channelId="test-channel-id"
    channelStatus="test"
    channelType="D"
    displayName="Channel display name"
    handleClose={null}
    link="/current-team/messages/@undefined"
    membersCount={8}
    rowClass="sidebar-item unread-title has-badge"
    teammateDeletedAt={1}
    teammateId="teammate-id"
    unreadMentions={4}
  />
</li>
`;

exports[`component/sidebar/sidebar_channel/SidebarChannel should match snapshot, on channel show without unread mentions (must have no badge) 1`] = `
<li
  className=""
  key="channel-name"
>
  <SidebarChannelButtonOrLink
    badge={false}
    channelId="test-channel-id"
    channelStatus="test"
    channelType="D"
    displayName="Channel display name"
    handleClose={[Function]}
    link="/current-team/messages/@undefined"
    membersCount={8}
    rowClass="sidebar-item has-close"
    teammateDeletedAt={1}
    teammateId="teammate-id"
    unreadMentions={0}
  />
</li>
`;

exports[`component/sidebar/sidebar_channel/SidebarChannel should match snapshot, on default channel show 1`] = `
<li
  className=""
  key="town-square"
>
  <SidebarChannelButtonOrLink
    badge={false}
    channelId="test-channel-id"
    channelStatus="test"
    channelType="P"
    displayName="Channel display name"
    handleClose={null}
    link="/current-team/channels/town-square"
    membersCount={8}
    rowClass="sidebar-item"
    teammateDeletedAt={1}
    teammateId="teammate-id"
    unreadMentions={0}
  />
</li>
`;

exports[`component/sidebar/sidebar_channel/SidebarChannel should match snapshot, on default channel show with enable X to close 1`] = `
<li
  className=""
  key="town-square"
>
  <SidebarChannelButtonOrLink
    badge={false}
    channelId="test-channel-id"
    channelStatus="test"
    channelType="O"
    displayName="Channel display name"
    handleClose={null}
    link="/current-team/channels/town-square"
    membersCount={8}
    rowClass="sidebar-item"
    teammateDeletedAt={1}
    teammateId="teammate-id"
    unreadMentions={0}
  />
</li>
`;

exports[`component/sidebar/sidebar_channel/SidebarChannel should match snapshot, on fake channel show 1`] = `
<li
  className=""
  key="channel-name"
>
  <SidebarChannelButtonOrLink
    badge={false}
    channelId="test-channel-id"
    channelStatus="test"
    channelType="D"
    displayName="Channel display name"
    handleClose={[Function]}
    link="/current-team/channels/channel-name?fakechannel=%7B%22display_name%22%3A%22Channel%20display%20name%22%2C%22name%22%3A%22channel-name%22%2C%22type%22%3A%22D%22%2C%22id%22%3A%22test-channel-id%22%2C%22status%22%3A%22test%22%2C%22fake%22%3Atrue%7D"
    membersCount={8}
    rowClass="sidebar-item has-close"
    teammateDeletedAt={1}
    teammateId="teammate-id"
    unreadMentions={0}
  />
</li>
`;

exports[`component/sidebar/sidebar_channel/SidebarChannel should match snapshot, on group channel show 1`] = `
<li
  className=""
  key="channel-name"
>
  <SidebarChannelButtonOrLink
    badge={false}
    channelId="test-channel-id"
    channelStatus="test"
    channelType="P"
    displayName="Channel display name"
    handleClose={null}
    link="/current-team/channels/channel-name"
    membersCount={8}
    rowClass="sidebar-item"
    teammateDeletedAt={1}
    teammateId="teammate-id"
    unreadMentions={0}
  />
</li>
`;

exports[`component/sidebar/sidebar_channel/SidebarChannel should match snapshot, on group channel show with enable X to close 1`] = `
<li
  className=""
  key="channel-name"
>
  <SidebarChannelButtonOrLink
    badge={false}
    channelId="test-channel-id"
    channelStatus="test"
    channelType="P"
    displayName="Channel display name"
    handleClose={[Function]}
    link="/current-team/channels/channel-name"
    membersCount={8}
    rowClass="sidebar-item has-close"
    teammateDeletedAt={1}
    teammateId="teammate-id"
    unreadMentions={0}
  />
</li>
`;

exports[`component/sidebar/sidebar_channel/SidebarChannel should match snapshot, on myself channel show 1`] = `
<li
  className=""
  key="channel-name"
>
  <SidebarChannelButtonOrLink
    badge={false}
    channelId="test-channel-id"
    channelStatus="test"
    channelType="D"
    displayName={
      <FormattedMessage
        defaultMessage="{displayname} (you)"
        id="sidebar.directchannel.you"
        values={
          Object {
            "displayname": "Channel display name",
          }
        }
      />
    }
    handleClose={[Function]}
    link="/current-team/messages/@undefined"
    membersCount={8}
    rowClass="sidebar-item has-close"
    teammateDeletedAt={1}
    teammateId="myself"
    unreadMentions={0}
  />
</li>
`;

exports[`component/sidebar/sidebar_channel/SidebarChannel should match snapshot, on private channel show 1`] = `
<li
  className=""
  key="channel-name"
>
  <SidebarChannelButtonOrLink
    badge={false}
    channelId="test-channel-id"
    channelStatus="test"
    channelType="P"
    displayName="Channel display name"
    handleClose={null}
    link="/current-team/channels/channel-name"
    membersCount={8}
    rowClass="sidebar-item"
    teammateDeletedAt={1}
    teammateId="teammate-id"
    unreadMentions={0}
  />
</li>
`;

exports[`component/sidebar/sidebar_channel/SidebarChannel should match snapshot, on private channel show with enable X to close 1`] = `
<li
  className=""
  key="channel-name"
>
  <SidebarChannelButtonOrLink
    badge={false}
    channelId="test-channel-id"
    channelStatus="test"
    channelType="P"
    displayName="Channel display name"
    handleClose={[Function]}
    link="/current-team/channels/channel-name"
    membersCount={8}
    rowClass="sidebar-item has-close"
    teammateDeletedAt={1}
    teammateId="teammate-id"
    unreadMentions={0}
  />
</li>
`;

exports[`component/sidebar/sidebar_channel/SidebarChannel should match snapshot, on public channel show 1`] = `
<li
  className=""
  key="channel-name"
>
  <SidebarChannelButtonOrLink
    badge={false}
    channelId="test-channel-id"
    channelStatus="test"
    channelType="O"
    displayName="Channel display name"
    handleClose={null}
    link="/current-team/channels/channel-name"
    membersCount={8}
    rowClass="sidebar-item"
    teammateDeletedAt={1}
    teammateId="teammate-id"
    unreadMentions={0}
  />
</li>
`;

exports[`component/sidebar/sidebar_channel/SidebarChannel should match snapshot, on public channel show with enable X to close 1`] = `
<li
  className=""
  key="channel-name"
>
  <SidebarChannelButtonOrLink
    badge={false}
    channelId="test-channel-id"
    channelStatus="test"
    channelType="O"
    displayName="Channel display name"
    handleClose={[Function]}
    link="/current-team/channels/channel-name"
    membersCount={8}
    rowClass="sidebar-item has-close"
    teammateDeletedAt={1}
    teammateId="teammate-id"
    unreadMentions={0}
  />
</li>
`;
